src/test/deca/context/invalid/class/46-regle2-4DeclarationField.deca
/* Description:
     teste la régle (2.4) Déclaration de field plusieur fois avec le meme  type

    Historique:
      cree le 22/01/2020
*/

class A {
  B class1;
  B class1;
}

class B {

}
